move files; working on squares

--- a/static/index.html
+++ b/static/index.html
@@ -1,11 +1,13 @@
 <html>
   <body>
 <p></p>
-<script src="raphael-min.js"></script>
+<script src="/js/raphael-min.js"></script>
 
-<script src="ieee754.js"></script>
-<script src="jsox.js"></script>
-<script src="circles.js"></script>
+<script src="/js/ieee754.js"></script>
+<script src="/js/jsox.js"></script>
+
+<script src="/js/circles.js"></script>
+<script src="/js/squares.js"></script>
 </body>
 
 </html>
