--- a/static/index.html
+++ b/static/index.html
@@ -1,4 +1,7 @@
 <html>
+<head>
+<link rel="stylesheet" type="text/css" href="squares.css">
+</head>
   <body>
 <p></p>
 <script src="/js/raphael-min.js"></script>
@@ -6,7 +9,7 @@
 <script src="/js/ieee754.js"></script>
 <script src="/js/jsox.js"></script>
 
-<script src="/js/circles.js"></script>
+<!-- <script src="/js/circles.js"></script> -->
 <script src="/js/squares.js"></script>
 </body>
 
