using raphael.freetransform library

--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,8 @@
 <p></p>
 <script src="/js/raphael-min.js"></script>
 
+<script src="/js/ft.js"></script>
+
 <script src="/js/ieee754.js"></script>
 <script src="/js/jsox.js"></script>
 
