--- a/static/index.html
+++ b/static/index.html
@@ -8,11 +8,17 @@
 
 <script src="/js/ft.js"></script>
 
+
+
 <script src="/js/ieee754.js"></script>
 <script src="/js/jsox.js"></script>
 
+
 <!-- <script src="/js/circles.js"></script> -->
+<script src="/js/paper.js"></script>
+<script src="/js/utils.js"></script>
 <script src="/js/squares.js"></script>
+
 </body>
 
 </html>
