making progress with rotating circles

--- a/static/index.html
+++ b/static/index.html
@@ -1,7 +1,7 @@
 <html>
   <body>
     <p></p>
-    <script src="/js/raphael-min.js"></script>
+    <script src="/js/raphael.js"></script>
     
     <script src="/js/ft.js"></script>
     
