readme; attempt to fix start invocation on window.onload

--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,13 @@
 <html>
+<head>
+<script>
+load = function () {
+  START();
+};
+window.onload = load;
+</script>
+</head>
   <body>
-    <p></p>
     <script src="/js/raphael/raphael.js"></script>
     
     <script src="/js/Raphael.FreeTransform/raphael.free_transform.js"></script>
@@ -12,4 +19,5 @@
     <script src="/js/squares.js"></script>
     <script src="/js/paper.js"></script>
   </body>
+
 </html>
