--- a/static/index.html
+++ b/static/index.html
@@ -1,11 +1,14 @@
 <html>
 <head>
-<script>
-load = function () {
+<script language="JavaScript" type="text/JavaScript">
+<!--
+function load() {
   START();
 };
 window.onload = load;
+//-->
 </script>
+
 </head>
   <body>
     <script src="/js/raphael/raphael.js"></script>
